Refactor code climate issues
This is to address some of the issues found here https://codeclimate.com/github/elcharitas/waxe/issues

--- a/samples/index.html
+++ b/samples/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title id="title"> Samples - @yield($title) </title>
-        <script src="./waxe.js" onload="setTimeout(Wax.resolve, 5, 'title, #wax', { title: 'Waxe.js' })"></script>
+        <script src="../dist/waxe.js" onload="setTimeout(Wax.resolve, 5, 'title, #wax', { title: 'Waxe.js' })"></script>
     </head>
     <body id="wax" hidden>
         @comment("This would not be parsed")
