--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <p><a href="https://npmjs.org/package/waxe"><img src="https://img.shields.io/badge/version-0.0.2-yellow.svg?cacheSeconds=2592000" alt="Version"></a>
 <a href="https://github.com/elcharitas/waxe#readme"><img src="https://img.shields.io/badge/documentation-yes-brightgreen.svg" alt="Documentation"></a>
 <a href="https://github.com/elcharitas/waxe/graphs/commit-activity"><img src="https://img.shields.io/badge/Maintained%3F-yes-green.svg" alt="Maintenance"></a>
+<a href="https://codeclimate.com/github/elcharitas/waxe/maintainability"><img src="https://api.codeclimate.com/v1/badges/bc5e7f8301a50b961cb8/maintainability" alt="Code Climate"></a>
 <a href="https://github.com/elcharitas/waxe/blob/master/LICENSE"><img src="https://img.shields.io/github/license/elcharitas/waxe" alt="License: MIT"></a>
 <a href="https://twitter.com/elcharitas"><img src="https://img.shields.io/twitter/follow/elcharitas.svg?style=social" alt="Twitter: elcharitas"></a></p>
 <blockquote>
