Fix types clutter
In previous builds, typescript is used to generate types which bundles unused type declaration. However, all types are now written in waxe.d.ts

--- a/samples/index.html
+++ b/samples/index.html
@@ -12,5 +12,8 @@
         <p>
             @yield("Generated in "+ ($now() - $startTime) + "ms")
         </p>
+        @js
+            this.name = 89;
+        @endjs
     </body>
 </html>
